tests/compile-fail/generated/derives-span-PartialOrd-enum-struct-variant.stderr
error: can't use `#[derivative(PartialOrd)]` on an enumeration without `feature_allow_slow_enum`; see the documentation for more details
  --> $DIR/derives-span-PartialOrd-enum-struct-variant.rs:13:1
   |
13 | #[derivative(PartialOrd,PartialEq)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-enum-struct-variant.rs:17:6
   |
17 |      x: Error
   |      ^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `std::cmp::PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`
